styles.css
/*general */
#app{
  margin: 0 auto 0 auto;
  display:flex;
  flex-direction: column;
  align-items: center;
}

#header-heading, #overview-heading, #total-followers, .dark-text, #followers, .followers-text, .title, .range, .numbers{
  font-family: 'Inter', sans-serif;
}

#social-media-dashboard :hover, #overview-dashboard :hover {
  background-color: #e0e0e0;
  cursor: pointer;
}

/*heading */

#heading-container{
  background-color: #f8f8f8;
  height:12rem;
  position:relative;
  display: flex;
  justify-content:space-around;
  width: 80rem;
  margin-bottom: -2rem;
}

#header-heading{
  margin-bottom:0.3rem;
  color:black;
}

.heading-info{
  padding-top:2rem;
  padding-right:20rem;
}

#total-followers{
  margin-top: 0;
  font-size:1rem;
}

.dark-text{
  margin-right: 0.5rem;
  font-weight:bold;
}

/*switch section */

.switch-box{
  display:flex;
  justify-content: flex-end;
  align-items: center;
}
.switch {
  position: relative;
  display: inline-block;
  width: 54px;
  height: 26px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 19px;
  width: 19px;
  left: 4px;
  bottom: 4px;
  background-image: linear-gradient(90deg, rgba(21,39,87,1) 17%, rgba(13,74,91,1) 84%);
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-image: linear-gradient(90deg, rgba(10,248,115,1) 17%, rgba(10,196,252,1) 84%);
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

.switch-box{
  float:right;
}

/*social media dashboard */

#social-media-dashboard{
  position:relative;
  display: grid;
  grid-template-columns: repeat(4, 245px);
  grid-auto-rows: minmax(100px, auto);
  grid-gap:27px;
  margin: 0 auto 0 auto;
}

.media-box{
  background-color: #f8f8f8;
  padding: 2.5rem;
  display:flex;
  flex-direction: column;
  align-items: center;
}

.border-style{
  height: 0.5rem;
  width: 15.3rem;
  margin-top: -2.5rem;
}

#username{
  margin-top:2rem;
  font-size:0.9rem;
  font-family: 'Inter', sans-serif;
}

#followers, .followers-text{
  margin: 0;
}

#followers{
  font-size:2.7rem;
}

.followers-text{
  font-size: 0.7rem;
}

.trend-container{
  height: 5%;
  display:flex;
  flex-direction: row;
}

.range{
  margin-top:1rem;
}

/*overview dashboard*/

#overview-heading{
  margin:1rem;
  margin-right:51rem;
}

#overview-dashboard{
  display: grid;
  grid-template-columns: repeat(4, 250px);
  grid-auto-rows: minmax(100px, auto);
  grid-gap: 25px;
}

.overview-box{
  background-color: #f8f8f8;
  padding: 0 1.5rem 0 1.5rem;
  text-align: justify;
}

.top-container{
  width:100%;
  margin-top:0.5rem;
  display:flex;
  justify-content: space-between;
  align-items: center;
}

.bottom-container{
  width:100%;
  display:flex;
  align-items: center;
  justify-content: space-between;
}

.title{
  font-size: 1rem;
  white-space: nowrap;
}

.range{
  font-size: 0.8rem;
}

/****mobile view ****/
@media screen and (max-width: 500px){
  #heading-container{
    width: 35rem;
  }

  #heading-container{
    padding-right:5rem;
  }

  #header-heading{
    font-size: 1rem;
  }

  #total-followers{
    font-size: 1rem;
  }

  .switch-box{

  }

  .border-style{
    height: 0.5rem;
    width: 29rem;
    margin-top: -2.5rem;
  }

  #social-media-dashboard, #overview-dashboard{
    width: 100%;
    display:flex;
    flex-direction: column;
  }

  #overview-heading{
    margin-right:11rem;
  }
}

